# Hortrog

./: .clang-format  .gitignore  Bill.cpp  Bill.h  CMakeLists.txt  CMakePresets.json  Payment.cpp  Payment.h  PointOfSales.cpp  PointOfSales.h  README.md  SubBill.cpp  SubBill.h  main.cpp  makefile
.github/workflows/: ci.yml  cmake-multi-platform.yml  ctest.yml  main.yml
assets/: demo_asset.json  gameMap.json  menu_items.json
assets/textures/: floor1.png~
docs/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  main.cpp
src/Menu/: Menu.cpp  Menu.h
src/billing/: Bill.h  CardPayment.cpp  CardPayment.h  CashPayment.cpp  CashPayment.h  EvenSplit.cpp  EvenSplit.h  OneReceipt.cpp  OneReceipt.h  POSStrategy.cpp  POSStrategy.h  Payment.cpp  Payment.h  PerCustomer.cpp  PerCustomer.h  PointOfSales.cpp  PointOfSales.h
src/billing2/: OneReceipt.h  POSStrategy.h  Payment.cpp
src/billingNew/: CardPayment.h
src/core/: Application.h  AssetLoader.cpp  AssetLoader.h  Command.h  CommandMenu.cpp  CommandMenu.h  GraphicsApp.cpp  GraphicsApp.h  TerminalApp.cpp  TerminalApp.h  Timer.h  util.cpp  util.h
src/customer/: Customer.cpp  Customer.h  CustomerState.h  EatingState.cpp  EatingState.h  KarenState.cpp  KarenState.h  OrderingState.cpp  OrderingState.h  PayingState.cpp  PayingState.h  WaitingState.cpp  WaitingState.h
src/demo/: CustomerOrderDemo.cpp  CustomerOrderDemo.h  FloorDemo.cpp  FloorDemo.h  GameDemo.cpp  GameDemo.h  KitchenDem.cpp  KitchenDem.h  KitchenDemo.cpp  KitchenDemo.h  WaiterDemo.cpp  WaiterDemo.h
src/event/: Action.cpp  Action.h  ActionMap.cpp  ActionMap.h  ActionMap.inl  ActionTarget.cpp  ActionTarget.h  ActionTarget.inl
src/floor/: Customer.h  CustomerIterator.cpp  CustomerIterator.h  Floor.cpp  Floor.h  FloorView.cpp  FloorView.h  Table.cpp  Table.h  TableComponent.cpp  TableComponent.h  TableGroup.cpp  TableGroup.h
src/game/: Game.cpp  Game.h  Manager.h  Map.cpp  Map.h  Object.cpp  Object.h  Waiter.cpp  Waiter.h  floor.cpp  floor.h
src/gui/: Drawable.h  Presenter.h  View.h  ViewDecorator.h
src/men/: Menu.cpp  Menu.h
src/menu/: Menu.cpp  Menu.h
src/multiply/: multiply.cpp  multiply.h
src/order/: ConcreteOrderBuilder.cpp  ConcreteOrderBuilder.h  Modifier.cpp  Modifier.h  NullOrderBuilder.cpp  NullOrderBuilder.h  Order.h  OrderBuilder.h  OrderComposite.cpp  OrderComposite.h  OrderItem.cpp  OrderItem.h  Receipt.cpp  Receipt.h  orderTesting.cpp
src/resource/: ResourceManager.h  ResourceManager.inl
src/staff/: FloorStaff.h  Manager.cpp  Manager.h  Waiter.cpp  Waiter.h
src/subsystem/: Builder.h  Director.cpp  Director.h  GlutenFree.cpp  GlutenFree.h  Item.cpp  Item.h  Kitchen.h  Meal.cpp  Meal.h  MealItem.cpp  MealItem.h  Menu.h  MenuItem.cpp  MenuItem.h  Modifier.cpp  Modifier.h  MyClass.h  Order.cpp  Order.h  OrderBuilder.cpp  OrderBuilder.h  Pescetarian.cpp  Pescetarian.h  Tab.cpp  Tab.h  Table.cpp  Table.h
src/subsystem/Chef/: HeadChef.cpp  HeadChef.h  Kitchen.cpp  Kitchen.h  KitchenStaff.cpp  KitchenStaff.h  NormalChef.cpp  NormalChef.h  kitchenDemo.cpp  kitchenDemo.h
src/subsystem/MealTemplate/: Meal.cpp  Meal.h  MealItem.cpp  MealItem.h
src/subsystem/Meals/: Meal.cpp  Meal.h  MealItem.cpp  MealItem.h
src/subsystem/OrderTemplate/: Order.cpp  Order.h
src/subsystem/WaiterTemplate/: Waiter.cpp  Waiter.h
src/subsystem/menu/: Item.cpp  Item.h  ItemJSON.cpp  ItemJSON.h  OrderJSON.cpp  OrderJSON.h
src/tentative_floor/: Floor.cpp  Floor.h
src/views/: FloorView.cpp  FloorView.h  SpriteView.h  TablePresenter.cpp  TablePresenter.h  TableView.cpp  TableView.h
tests/: CMakeLists.txt  OrderComposite_test.cpp  chainTest.cpp  customer_order_demo_test.cpp  mealItem_test.cpp  menu_test.cpp  modifier_test.cpp  multiply_test.cpp  order_composite_test.cpp  order_item_test.cpp  payment_test.cpp  receipt_test.cpp  resource_test.cpp  staff_test.cpp  subsystem_test.cpp  table_test.cpp  timer_test.cpp
